Subindo containres com docker

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -1,24 +1,9 @@
 version: "3.7"
 
 services:
-    server:
-        build:
-            context: ./
-            target: development-build-stage
-        ports:
-            - "${APP_PORT:-3000}:3000"
-        volumes:
-            - ./:/app
-            - /app/node_modules
-        restart: "unless-stopped"
-        networks:
-            - backend
-        depends_on:
-            - mysql
-            - redis
-
     mysql:
         image: "mysql:8.0"
+        container_name: 'back_mysql'
         environment:
             MYSQL_ROOT_PASSWORD: "${TYPEORM_PASSWORD}"
             MYSQL_DATABASE: "${TYPEORM_DATABASE}"
@@ -28,7 +13,7 @@ services:
         ports:
             - "${FORWARD_DB_PORT:-3306}:3306"
         volumes:
-            - "backendmysql:/var/lib/mysql"
+            - "backmysql:/var/lib/mysql"
         networks:
             - backend
         healthcheck:
@@ -36,10 +21,11 @@ services:
 
     redis:
         image: "redis:alpine"
+        container_name: 'back_redis'
         ports:
             - "${FORWARD_REDIS_PORT:-6379}:6379"
         volumes:
-            - "backendredis:/data"
+            - "backredis:/data"
         networks:
             - backend
         healthcheck:
@@ -47,6 +33,7 @@ services:
 
     mailhog:
         image: "mailhog/mailhog:latest"
+        container_name: 'back_mailhog'
         ports:
             - '${FORWARD_MAILHOG_PORT:-1025}:1025'
             - '${FORWARD_MAILHOG_DASHBOARD_PORT:-8025}:8025'
@@ -58,7 +45,7 @@ networks:
         driver: bridge
 
 volumes:
-    backendmysql:
+    backmysql:
         driver: local
-    backendredis:
+    backredis:
         driver: local
