--- a/package.json
+++ b/package.json
@@ -3,12 +3,13 @@
   "version": "1.0.0",
   "description": "Express typescript.",
   "scripts": {
-    "dev": "NODE_ENV=development ./node_modules/.bin/nodemon --exec './node_modules/.bin/ts-node' src/main.ts",
-    "start": "npm run build && NODE_ENV=production node ./dist/main.js",
+    "dev": "cross-env NODE_ENV=development ./node_modules/.bin/nodemon --exec './node_modules/.bin/ts-node' src/main.ts",
+    "start": "npm run build && cross-env NODE_ENV=production node ./dist/main.js",
     "build": "tsc",
     "typeorm": "ts-node -r ./fix-module-alias.js ./node_modules/.bin/typeorm",
-    "make:migration": "npm run typeorm -- migration:create -n",
-    "migrate": "npm run typeorm -- migration:run",
+    "typeorm:cli": "ts-node ./node_modules/typeorm/cli -f ./src/config/db.ts",
+    "make:migration": "ts-node ./node_modules/.bin/typeorm migration:create -n",
+    "migrate": "ts-node ./node_modules/.bin/typeorm -- migration:run",
     "seed:config": "ts-node -r ./fix-module-alias.js ./node_modules/typeorm-seeding/dist/cli.js config",
     "db:seed": "ts-node -r ./fix-module-alias.js ./node_modules/typeorm-seeding/dist/cli.js seed",
     "db:seed:production": "NODE_ENV=production ts-node -r ./fix-module-alias.js ./node_modules/typeorm-seeding/dist/cli.js seed",
@@ -33,6 +34,7 @@
     "class-validator-jsonschema": "^3.1.0",
     "cors": "^2.8.5",
     "cron-decorators": "^0.1.5",
+    "cross-env": "^7.0.3",
     "dotenv": "^8.6.0",
     "event-dispatch": "^0.4.1",
     "express": "^4.17.1",
