--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
     "dev": "cross-env NODE_ENV=development ./node_modules/.bin/nodemon --exec './node_modules/.bin/ts-node' src/main.ts",
     "start": "npm run build && cross-env NODE_ENV=production node ./dist/main.js",
     "build": "tsc",
-    "typeorm": "ts-node -r ./fix-module-alias.js ./node_modules/.bin/typeorm",
+    "typeorm": "ts-node -r ./fix-module-alias.js ./node_modules/.bin/typeorm --config src/config/db.ts",
     "typeorm:cli": "ts-node ./node_modules/typeorm/cli -f ./src/config/db.ts",
     "make:migration": "ts-node ./node_modules/.bin/typeorm migration:create -n",
-    "migrate": "ts-node ./node_modules/.bin/typeorm -- migration:run",
+    "migrate": "yarn typeorm migration:run",
     "seed:config": "ts-node -r ./fix-module-alias.js ./node_modules/typeorm-seeding/dist/cli.js config",
     "db:seed": "ts-node -r ./fix-module-alias.js ./node_modules/typeorm-seeding/dist/cli.js seed",
     "db:seed:production": "NODE_ENV=production ts-node -r ./fix-module-alias.js ./node_modules/typeorm-seeding/dist/cli.js seed",
@@ -29,7 +29,7 @@
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
     "bullmq": "^1.46.4",
-    "class-transformer": "^0.4.0",
+    "class-transformer": "^0.5.0",
     "class-validator": "^0.13.1",
     "class-validator-jsonschema": "^3.1.0",
     "cors": "^2.8.5",
