--- a/package.json
+++ b/package.json
@@ -7,11 +7,14 @@
     "start": "npm run build && cross-env NODE_ENV=production node ./dist/main.js",
     "build": "tsc",
     "typeorm": "ts-node -r ./fix-module-alias.js ./node_modules/.bin/typeorm --config src/config/db.ts",
+    "typeorm2": "ts-node -r ./fix-module-alias.js ./node_modules/.bin/typeorm",
     "typeorm:cli": "ts-node ./node_modules/typeorm/cli -f ./src/config/db.ts",
     "make:migration": "ts-node ./node_modules/.bin/typeorm migration:create -n",
-    "migrate": "yarn typeorm migration:run",
+    "migrate:dev": "cross-env NODE_ENV=development yarn typeorm2 migration:run",
+    "migrate": "yarn typeorm2 migration:run",
     "seed:config": "ts-node -r ./fix-module-alias.js ./node_modules/typeorm-seeding/dist/cli.js config",
     "db:seed": "ts-node -r ./fix-module-alias.js ./node_modules/typeorm-seeding/dist/cli.js seed",
+    "db:seed:dev": "NODE_ENV=development ts-node -r ./fix-module-alias.js ./node_modules/typeorm-seeding/dist/cli.js seed",
     "db:seed:production": "NODE_ENV=production ts-node -r ./fix-module-alias.js ./node_modules/typeorm-seeding/dist/cli.js seed",
     "code:format": "prettier --write \"src/**/*.{ts,css,js,html}\"",
     "code:check": "prettier --check \"src/**/*.{ts,css,js,html}\"",
