--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -5,11 +5,12 @@ services:
         image: "mysql:8.0"
         container_name: 'back_mysql'
         environment:
+            MYSQL_HOST: "%"
             MYSQL_ROOT_PASSWORD: "${TYPEORM_PASSWORD}"
             MYSQL_DATABASE: "${TYPEORM_DATABASE}"
             MYSQL_USER: "${TYPEORM_USERNAME}"
             MYSQL_PASSWORD: "${TYPEORM_PASSWORD}"
-            MYSQL_ALLOW_EMPTY_PASSWORD: "yes"
+            # MYSQL_ALLOW_EMPTY_PASSWORD: "yes"
         ports:
             - "${FORWARD_DB_PORT}:3306"
         volumes:
